# BarLay

./: .gitignore  LICENSE  README.md
2-OPT/: CMakeLists.txt  README.md  barcode.h  direction.h  input_layout.h  layout.h  layout_cost.h  local_search.cuh  local_search_host.h  main.cu  random_layout.h  synthesis_schedule.h
2-OPT/src/: barcode.h  barcode_index.h  convert_barcodes_to_synthesis_schedules.cu  input_layout.h  local_search_dev_0.cuh  local_search_dev_1.cuh  local_search_dev_2.cuh  local_search_dev_3.cuh  main.cu  main_syn_sched.cu  random_layout.h  read_barcodes.h  synthesis_distance_dev_0.cuh  synthesis_distance_dev_1.cuh  synthesis_distance_device.cuh  synthesis_distance_host.h  synthesis_schedule.h
GREEDY/: README.md
GREEDY/scripts/: batch.sh  build.sh  configure.sh  define_new_neighborhood.sh
GREEDY/src/: .gitignore  algorithm.cu  barcodes.cu  d_synth.cu  layout.cu  main.cu  types.hu
GREEDY/src/neighborhood/: n8.cu
tooling/: README.md  go.mod  main.go
tooling/cmd/: barcode.go  barcode_schedule.go  layout.go  layout_verify.go  layout_verify_test.go  root.go
